# digitRec

./: LICENSE.md  README.md  digitRec.cabal  stack.yaml
.stack-work/install/69d820b8/flag-cache/: Boolean-0.2.4-B1NSCEhcdcz8c9Ln6Sg4QC  Cabal-2.0.1.1-Fs1ITBnI1cpHdS6gABE76T  JuicyPixels-3.2.9.5-2XvTMfxs0Kx3BzXC84P9nD  JuicyPixels-repa-0.7.1.0-9vNgFsHxj5f1l3gRHyRzsW  MemoTrie-0.6.9-9oyyoBrZ4fvDOpGn3aedCY  MonadPrompt-1.0.0.5-CzhXuqwnSyt8FMVt4Y4aVT  MonadRandom-0.5.1.1-9HGa3C4zWaNAUtUUGPWlcM  NumInstances-1.4-19S6bzeD1RL8gvjt3IIhD6  QuickCheck-2.10.1-4Os66uOJMCzBKiZgTbIvyk  StateVar-1.1.1.0-7hicwZfZdWh9t78q7QM8bm  ad-4.3.5-6cp9GCCfRXx5C3s6OMOUBV  aeson-1.2.4.0-IxtvtMO6z5nF5rg8IGPa7y  ansi-terminal-0.8.0.4-6Dv6W9fnHciAtgLhIEBfQN  appar-0.1.4-4hjiMZCExd3CrJSMoeXviI  async-2.1.1.1-K429Y4XjamzDpSomhW85Gx  attoparsec-0.13.2.2-3s3CgsAU1UREeeuHUZFQiP  auto-update-0.1.4-DRogbfFYNQeJCAE3NJ8IZH  base-compat-0.9.3-61QXrLshUW48h5q15T0fg0  base-orphans-0.7-CqEfBQ2VoSwBto5sloaJI4  base64-bytestring-1.0.0.1-8MlzMz2YH3lCqJ4GOwL1Be  bifunctors-5.5.2-2xREv4oZtKi8pLC91AmMqx  blaze-builder-0.4.1.0-BFOenXCaiVr8U0JVhwUfLi  bsb-http-chunked-0.0.0.2-H3ktYq6qdL78zDrB20Wed  byteorder-1.0.4-C3RUhEkbWDI7bhRvbw5CmU  bytes-0.15.4-L378TlG1IfSIDOP7i28OAF  bytestring-builder-0.10.8.1.0-EDQdR3R0EemEMKmDJYWM6n  cabal-doctest-1.0.6-GBn1LFiApt47J7UpYtIFi0  case-insensitive-1.2.0.11-DieXAizupZnBb7Wfxln47O  (+92 more)
src/: Backpropagation.hs  MNIST.hs  Main.hs  NeuralNetwork.hs  SampleSolution.hs  Teaching.hs  Testing.hs  Training.hs
src/data/: defaultNet.txt  solutionNet.txt
src/web/: index.html  license.txt
(+53 files in other folders)
