name:                digitRec
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/digitRec#readme
license:             MIT
license-file:        LICENSE
author:              Saku K채rkk채inen
maintainer:          sapekark@student.jyu.fi
copyright:           2018 Saku K채rkk채inen
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable digitRec
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <5, bytestring, base64-bytestring, random, random-shuffle, scotty, JuicyPixels, JuicyPixels-repa, vector, text
